# game-Chomp

./: .gitignore  chomp.ipynb  pattern_checker.ipynb  proof_illustrator.ipynb  readme.md
cpp_core/: CMakeLists.txt  __init__.py  main.cpp  shortcut.sh
cpp_core/include/: board.h  evidence.h  iterator.h  pattern.h
cpp_core/src/: board.cpp  evidence.cpp  iterator.cpp  pattern.cpp
py_core/: __init__.py  board.py  evidence.py  iterator.py
